<?xml version="1.0" encoding="utf-8"?>
<resources>
	
    <string name="aria2_version">1.16.5</string>
    <string name="app_name">Aria2AndroidDownloader</string>
    <!-- Menu Strings -->
    <string name="action_settings">Settings</string>
    <string name="exit">Exit</string>
    <!-- Settings Activity -->
    <string name="title_settings_activity">Settings</string>
	<string name="pref_connection_title">Connection Settings</string>
    <string name="pref_download_settings">Download Settings</string>
    <!-- Connection Settings -->
    <string name="pref_title_remote">Remote</string>
    <string name="pref_title_host">Host</string>
    <string name="pref_title_port">Port</string>
    <string name="pref_title_encryption">Encryption</string>
    <string name="pref_title_username">Username</string>
    <string name="pref_title_password">Password</string>
    <string name="pref_summary_remote">Enable this if you want to connect to a remote server</string>
    <string name="pref_summary_host">The name or IP of the server aria2 run on</string>
    <string name="pref_summary_port">The port aria2 listen on the remote server</string>
    <string name="pref_summary_encryption">Enable encrytion for the data send/received. If this isn\'t enabled on the remote server connection will fail</string>
    <string name="pref_summary_username">The username you defined on the remote server</string>
    <string name="pref_summary_password">The password you defined on the remote server</string>
    <!-- Download Settings Menus-->
    <string name="advanced_settings">Advanced Settings</string>
    <string name="basic_settings">Basic Settings</string>
    <string name="FTP_specific_settings">FTP Specific Settings</string>
    <string name="HTTP_FTP_settings">HTTP/FTP Settings</string>
    <string name="HTTP_specific_settings">HTTP Specific Settings</string>
    <string name="metalink_specific_settings">Metalink Specific settings</string>
    <string name="torrent_metalink_settings">Torrent/Metalink Settings</string>
    <string name="torrent_specific_settings">Torrent Specific Settings</string>
    <!-- Basic Settings -->
    <string name="pref_title_directory">Directory</string>
    <string name="pref_summary_directory">Where the downloaded files will be stored</string>
    <string name="pref_title_concurrent">Concurrent Downloads</string>
    <string name="pref_summary_concurrent">Number of parallel downloads</string>
    <string name="pref_title_integrity">Integrity Check</string>
    <!-- HTTP/FTP Common options -->
    <string name="pref_title_Advanced">Advanced Settings</string>
    <string name="pref_title_Basic">Basic Settings</string>
    <string name="pref_title_all_proxy">All Proxy</string>
    <string name="pref_summary_all_proxy">Use this proxy server for all protocols</string>
    <string name="pref_title_all_user">All Proxy User</string>
    <string name="pref_summary_all_user">Sets the username to use with the "All Proxy" option</string>
    <string name="pref_title_all_passwd">All Proxy Password</string>
    <string name="pref_summary_all_passwd">Sets the password to use with the "All Proxy" option</string>
    <string name="pref_title_connection_timeout">Connection Timeout</string>
    <string name="pref_summary_connection_timeout">Set the connect timeout in seconds to establish a connection to the HTTP/FTP/Proxy server</string>
    <string name="pref_title_max_connections">Max. Connection Per Server</string>
    <string name="pref_summary_max_conections">The maximum number of connections to one server for each download Default : 1</string>
    <string name="pref_title_tries">Max Tries</string>
    <string name="pref_summary_tries">Set number of tries 0 means unlimited</string>
    <string name="pref_title_min_split">Min Split Size</string>
    <string name="pref_summary_min_split">Aria2 will try to split the downloaded files by that size</string>
    <string name="pref_title_proxy_method">Proxy Method</string>
    <string name="pref_summary_proxy_method">Set the method to use in proxy request method Default : get</string>
    <string name="pref_title_remote_time">Remote Time</string>
    <string name="pref_summary_remote_time">Retrieve timestamp from the remote server</string>
    <string name="pref_title_reuse">Reuse URIs</string>
    <string name="pref_summary_reuse">Reuse already used URIs if no unused are left</string>
    <string name="pref_title_retry_wait">Retry Wait</string>
    <string name="pref_summary_retry_wait">Set the seconds to wait between retries Default : 0</string>
    <string name="pref_title_timeout">Timeout</string>
    <string name="pref_summary_timeout">Set timeout in seconds Default : 60</string>
    <!-- HTTP Specific options -->   
    <!-- Arrays -->
    <string-array name="array_proxy_method_values">
        <item>get</item>
        <item>tunnel</item>
    </string-array>
    <!-- Debug Items -->
    <string-array name="default_current_download">
        <item >A Movie</item>
        <item >A Music</item>
        <item >A Game</item>
        <item >A Book</item>
    </string-array>
    
</resources>